<resources>
    <string name="app_name">ZavrsniTest</string>

    <string name="tb_action_add">Add</string>
    <string name="tb_action_settings">Settings</string>
    <string name="tb_action_info">Info</string>

    <string name="tb_action_edit">edit</string>
    <string name="tb_action_delete">Delete</string>
    <string name="tb_action_add_movie">Add movie</string>

    <string name="pref_title_tost">Show Toast message</string>
    <string name="pref_title_notification">Show Notification message</string>

    <string name="bt_dialog_ok">OK</string>
    <string name="bt_dialog_cancel">Cancel</string>
    <string name="dialog_text">Author: Bojan Markovic</string>

    <string name="movie_title">MOVIE</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_year">Year</string>
    <string name="nekretnine">NEKRETNINE</string>
    <string name="naziv">Naziv</string>
    <string name="opis">Opis</string>
    <string name="slika">Slika</string>
    <string name="adresa">Adresa</string>
    <string name="br_tel">Br. tel.</string>
    <string name="kvadratura">Kvadratura</string>
    <string name="br_soba">Br. soba</string>
    <string name="cena">Cena</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
</resources>
